Enable native access for ALL-UNNAMED